--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Titre de la page</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	<title>Mission Sauvetage : Noël Vert</title>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 	
 </body>
+	<script src="assets/js/main.js"></script>
 </html>
