--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	
+	<header>
+		<h1 id="context-title"></h1>
+	</header>
+	<div>
+		<div>
+			<p id="context-ctx"></p>
+			<ul id="opt"></ul>
+			<button id="next">Suivant</button>
+		</div>
+		<img id="picture" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Strasbourg_capitale_de_No%C3%ABl_grand_sapin_2014_02.jpg"/>
+	</div>
 </body>
 	<script src="assets/js/main.js"></script>
 </html>
