up structure html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 	<header>
 		<h1 id="context-title"></h1>
 	</header>
-	<div>
-		<div>
-			<p id="context-ctx"></p>
-			<ul id="opt"></ul>
-			<button id="next">Suivant</button>
-		</div>
-		<img id="picture" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Strasbourg_capitale_de_No%C3%ABl_grand_sapin_2014_02.jpg"/>
-	</div>
+	<section>
+		<section>
+			<article>
+				<p id="context-ctx"></p>
+			</article>
+			<article>
+				<ul id="opt"></ul>
+				<button id="next">Suivant</button>
+			</article>
+		</section>
+		<article>
+			<img id="picture" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Strasbourg_capitale_de_No%C3%ABl_grand_sapin_2014_02.jpg"/>
+		</article>
+	</section>
 </body>
 	<script src="assets/js/main.js"></script>
 </html>
