--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</article>
 		</section>
 		<article>
-			<img id="picture" src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Strasbourg_capitale_de_No%C3%ABl_grand_sapin_2014_02.jpg"/>
+			<img id="picture" src=""/>
 		</article>
 	</section>
 </body>
