--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
 		</article>
 	</section>
 </body>
-	<script src="assets/js/main.js"></script>
+	<script defer src="assets/js/main.js"></script>
 </html>
