--- a/index.html
+++ b/index.html
@@ -1,12 +1,193 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
+
 <head>
-	<meta charset="utf-8">
-	<title>Titre de la page</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil - Mission Sauvetage : Noël Vert</title>
+    <link rel="stylesheet" href="assets/css/home.css">
 </head>
+
 <body>
-	
+    <div class="snows">
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+
+    </div>
+    <audio id="player" controls autoplay hidden>
+        <source src="/assets/music/enchanted-chimes-177906.mp3" type="audio/mp3">
+    </audio>
+    <header>
+        <div id="logo">
+            <img src="/assets/images/christmas-wreath.png" alt="placeholder">
+            <h1>Mission Sauvetage : Noel Vert</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.php?action=about">À propos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <section id="hero">
+
+            <h1>Urgence Climatique</h1>
+            <p>Le Père Noël a besoin de toi !</p>
+
+            <p id="p2">
+                Max Cassnoisette est un elfe du père noël qui adore les traditions de Noël
+                et plus particulièrement les sapins qui amènent la magie de Noël.
+                Il découvrira une mystérieuse maladie qui va menacer cette fête.
+                Grâce à ses choix il va essayer de le sauver, peut être, AU PERIL DE SA VIE...
+            </p>
+
+
+        </section>
+
+
+        <section id="intro">
+
+
+
+
+
+            <h1>Jouer</h1>
+
+            <a href="game.html" class="snow_button" id="play">Sauver le Père Noël !</a>
+
+        </section>
+
+
+        <section id="association">
+            <h1>L'association</h1>
+
+            <p>
+                Le Réseau Action Climat, fédération de 37 associations nationales
+                et locales, lutte contre les causes du changement climatique, de
+                l’échelle internationale à l’échelle locale. Il est le représentant
+                français du Climate Action Network International, réseau mondial
+                de plus de 1900 ONG.
+
+
+
+            </p>
+
+
+
+
+
+            <p>
+                Conscient des impacts majeurs, actuels et à venir, du changement climatique sur
+                l’ensemble de nos sociétés, le Réseau Action Climat porte la mise en place de
+                mesures pour réduire les émissions de gaz à effet de serre de l’ensemble des
+                secteurs responsables. Convaincu que la lutte contre le changement climatique
+                représente aussi une formidable option de sortie de crise et doit, pour réussir,
+                bénéficier au plus grand nombre, il promeut des mesures à la fois bonnes pour le
+                climat mais aussi porteuses de bénéfices en termes de création d’emplois, de
+                préservation de la santé et de plus de justice sociale et de solidarité.
+            </p>
+
+
+
+            <h2 style="margin-top: 100px;">Ses missions</h2>
+
+            <ul style="padding-right: 50%; padding-bottom: 40px;">
+                <li>
+                    Développer une expertise sur les politiques de lutte contre le
+                    changement climatique aux niveaux international, européen,
+                    national et local.
+                </li>
+
+                <li>
+                    Coordonner les membres de son réseau pour porter d’une seule
+                    voix auprès des décideurs des solutions de réduction des
+                    émissions de gaz à effet de serre dans les principaux secteurs
+                    responsables : transport, agriculture et alimentation, logement,
+                    industrie lourde, production et consommation d’énergie, etc.
+                </li>
+
+                <li>
+                    Œuvrer pour une plus grande solidarité avec les pays et populations
+                    les plus impactés par le changement climatique.
+                </li>
+
+                <li>
+                    Appuyer les actions et les mouvements de mobilisation non violents
+                    en faveur de la lutte contre le changement climatique.
+                </li>
+
+                <li>
+                    Informer et sensibiliser sur l’état des connaissances scientifiques
+                    autour des changements climatiques (sources des émissions de gaz
+                    à effet de serre, impacts actuels et à venir, solutions existantes…)
+                </li>
+            </ul>
+        </section>
+
+
+    </main>
+
+
+    <footer>
+        <p>
+            Site web réalisé avec ❤️ pendant la nuit de l'info 2023 par l'équipe <strong>MAX</strong>.
+        </p>
+        <ul>
+            <li><a href="https://filesender.renater.fr/?s=download&token=48d36f8b-dbf1-4eee-bdee-e1a1c311b5f8">Sujet</a></li>
+            <li><a href="https://www.nuitdelinfo.com/">Site de web - Nuit de l'Info</a></li>
+        </ul>
+        <p>© 2023 - Mission Sauvetage : Noël Vert</p>
+    </footer>
 </body>
+
 </html>
