--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.php?action=about">À propos</a></li>
+                <li><a href="/a-propos">À propos</a></li>
             </ul>
         </nav>
     </header>
