--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
 <body>
 	<header>
 		<h1 id="context-title"></h1>
-	</header>
-	<section>
 		<section>
-			<article>
-				<p id="context-ctx"></p>
-			</article>
-			<article>
-				<ul id="opt"></ul>
-				<button id="next">Suivant</button>
-			</article>
+			<img id="logoNDL" src="assets/images/NDL.svg" alt="Nuit de l'info 2023">
+			<img id="logoRAC" src="assets/images/RAC.webp" alt="Réseau Action Climat 2023">
 		</section>
-		<article>
-			<img id="picture" src=""/>
-		</article>
-	</section>
+	</header>
+	<main>
+		<section class="content">
+
+			<p id="context-ctx"></p>
+
+			<span id="question">Quel est votre choix ?</span>
+
+			<article>
+				<ul id="opt">
+				</ul>
+			</article>
+
+		</section>
+		<section class="content">
+			<img id="picture" src="" alt="">
+
+			<button id="next">Suivant</button>
+		</section>
+	</main>
+
 </body>
 	<script defer src="assets/js/main.js"></script>
 </html>
