--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <h1>Jouer</h1>
 
-            <a href="game.html" class="snow_button" id="play">Sauver le Père Noël !</a>
+            <a href="/play" class="snow_button" id="play">Sauver le Père Noël !</a>
 
         </section>
 
