--- a/game.html
+++ b/game.html
@@ -3,25 +3,36 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mission Sauvetage : Noël Vert</title>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	<header>
-		<h1 id="context-title"></h1>
-	</header>
+<header>
+	<h1 id="context-title"></h1>
 	<section>
-		<section>
-			<article>
-				<p id="context-ctx"></p>
-			</article>
-			<article>
-				<ul id="opt"></ul>
-				<button id="next">Suivant</button>
-			</article>
-		</section>
-		<article>
-			<img id="picture" src=""/>
-		</article>
+		<img id="logoNDL" src="assets/images/NDL.svg" alt="Nuit de l'info 2023">
+		<img id="logoRAC" src="assets/images/RAC.webp" alt="Réseau Action Climat 2023">
 	</section>
+</header>
+<main>
+	<section class="content">
+
+		<p id="context-ctx"></p>
+
+		<span id="question">Quel est votre choix ?</span>
+
+		<article>
+			<ul id="opt">
+			</ul>
+		</article>
+
+	</section>
+	<section class="content">
+		<img id="picture" src="" alt="">
+
+		<button id="next">Suivant</button>
+	</section>
+</main>
+
 </body>
-	<script defer src="assets/js/main.js"></script>
+<script defer src="assets/js/main.js"></script>
 </html>
