--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mission Sauvetage : Noël Vert</title>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 	<header>
