css bouton suivant game

--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
 	<section class="content">
 		<img id="picture" src="" alt="">
 
-		<button id="next">Suivant</button>
+		<button id="next" class="desactive_next">Suivant</button>
 	</section>
 </main>
 
