--- a/index.html
+++ b/index.html
@@ -194,41 +194,15 @@
             </li>
             <li><a href="https://www.nuitdelinfo.com/">Site de web - Nuit de l'Info</a></li>
         </ul>
+        <div id="secret-div">
+            <label for="secret">Code secret :</label>
+            <input type="text" id="secret" name="secret">
+            <button id="check-secret">vérifier</button>
+        </div>
         <p>© 2023 - Mission Sauvetage : Noël Vert</p>
     </footer>
 </body>
 
-<script>
-
-    window.addEventListener('load', () => {
-        const music = document.getElementById('pp');
-        const audio = document.querySelector('audio');
-
-        audio.loop = true;
-
-        if (window.localStorage.getItem('music') === 'off') {
-            music.style.setProperty('--text', "'OFF'");
-            audio.pause();
-        } else {
-            music.style.setProperty('--text', "'ON'");
-            audio.play();
-        }
-    });
-
-    const music = document.getElementById('pp');
-    const audio = document.querySelector('audio');
-
-    music.addEventListener('click', () => {
-        if (music.style.getPropertyValue('--text') === "'ON'") {
-            music.style.setProperty('--text', "'OFF'");
-            audio.pause();
-            window.localStorage.setItem('music', 'off');
-        } else {
-            music.style.setProperty('--text', "'ON'");
-            audio.play();
-            window.localStorage.setItem('music', 'on');
-        }
-    });
-</script>
+<script defer src="assets/js/index.js"></script>
 
 </html>
