--- a/404/index.html
+++ b/404/index.html
@@ -9,6 +9,10 @@
     <style>
       body {
         margin: 0;
+        background-image: Url("./assets/background.jpg") ;
+        background-repeat: no-repeat ;
+        background-size: 100%;
+        
       }
       canvas {
         width: 100%;
