--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 		<img id="logoRAC" src="assets/images/RAC.webp" alt="Réseau Action Climat 2023">
 	</section>
 </header>
-<main>
+<main id="main">
 	<section class="content">
 
 		<p id="context-ctx"></p>
@@ -24,6 +24,9 @@
 			<ul id="opt">
 			</ul>
 		</article>
+
+		<span id="code-secret">
+		</span>
 
 	</section>
 	<section class="content">
