Amélioration du tetris

--- a/404/index.html
+++ b/404/index.html
@@ -2,17 +2,16 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <title>Titre de la page</title>
+    <title>404</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
 
     <style>
       body {
         margin: 0;
-        background-image: Url("./assets/background.jpg") ;
-        background-repeat: no-repeat ;
+        background-image: Url("./assets/background.jpg");
+        background-repeat: no-repeat;
         background-size: 100%;
-        
       }
       canvas {
         width: 100%;
