--- a/404/index.html
+++ b/404/index.html
@@ -9,7 +9,7 @@
     <style>
       body {
         margin: 0;
-        background-image: Url("./assets/background.jpg");
+        background-image: Url("/404/assets/background.jpg");
         background-repeat: no-repeat;
         background-size: 100%;
       }
@@ -22,10 +22,10 @@
 
   <body>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
-    <script src="./src/js/configs.js"></script>
-    <script src="./src/js/utils.js"></script>
-    <script src="./src/js/Map.js"></script>
-    <script src="./src/js/PieceSet.js"></script>
-    <script src="./src/js/game.js"></script>
+    <script src="/404/src/js/configs.js"></script>
+    <script src="/404/src/js/utils.js"></script>
+    <script src="/404/src/js/Map.js"></script>
+    <script src="/404/src/js/PieceSet.js"></script>
+    <script src="/404/src/js/game.js"></script>
   </body>
 </html>
